Added DHPR documentation.

--- a/APIDocumentation/mdall-dataset-en.html
+++ b/APIDocumentation/mdall-dataset-en.html
@@ -455,7 +455,7 @@
 
 
                             <div class="col-md-12">
-                                <p>dadfafb ba;lksdf</p>
+                                <p>put text here</p>
 
                             </div>
 
