Fix typos in dhpr

--- a/APIDocumentation/api-en.html
+++ b/APIDocumentation/api-en.html
@@ -171,7 +171,12 @@
                 </p>
                 <p>
                     <a href="summary-report-documentation-en.html">Summary Report API Documentation</a></p>
-                
+                <p>
+                    <a href="dhpr-dataset-en.html">Drug and Health Products Register (DHPR) Dataset</a>
+                </p>
+                <p>
+                    <a href="dhpr-documentation-en.html">Drug and Health Products Register (DHPR)  API Documentation</a>
+                </p>
                 <p>
                     <a href="dpd-dataset-en.html">Drug Product Database (DPD) Dataset</a>
                 </p>
