--- a/APIDocumentation/dhpr-documentation-en.html
+++ b/APIDocumentation/dhpr-documentation-en.html
@@ -164,13 +164,10 @@
                 </nav>
                 <section>
                     <h2 id="a1">Introduction</h2>
-                    <p>The Canada Vigilance Adverse Reaction Online Database contains information about suspected adverse reactions (also known as side effects) to health products.</p>
-                    <p>The base URI for the Canada Vigilance Product (CVP) &nbsp;<a href="https://api.hres.ca/cvp/api-v1/">https://api.hres.ca/cvp/api-v1/</a>. Any requests are made relative to this URI.</p>
+                    <p>The Drug and Health Products Register contains information about .....</p>
+                    <p>The base URI for the Drug and Health Products Register &nbsp;<a href="https://api.hres.ca/dhpr/api-v1/">https://api.hres.ca/dhpr/api-v1/</a>. Any requests are made relative to this URI.</p>
                 </section>
-                
-
-                       
-                    <section>
+                  <section>
                         <h1 id="wb-cont">Drug and Health Products Register (DHPR) API Guide</h1>
                         <section>
                             <h2 id="a">Table of contents</h2>
