Name change from regulatory content to summary reports

--- a/APIDocumentation/api-en.html
+++ b/APIDocumentation/api-en.html
@@ -167,10 +167,10 @@
 
                 <p>APIs Documentation:</p>
                 <p>
-                    <a href="summary-report-dataset-en.html">Summary Report Dataset</a>
+                    <a href="summary-report-dataset-en.html">Summary Reports Dataset</a>
                 </p>
                 <p>
-                    <a href="summary-report-documentation-en.html">Summary Report API Documentation</a></p>
+                    <a href="summary-report-documentation-en.html">Summary Reports API Documentation</a></p>
                 <p>
                     <a href="dhpr-dataset-en.html">Drug and Health Products Register (DHPR) Dataset</a>
                 </p>
