--- a/APIDocumentation/data-source-en.html
+++ b/APIDocumentation/data-source-en.html
@@ -167,7 +167,7 @@
                     Drug and Health Product Register  - PostgreSQL Database - READ ONLY - HRE Environment
                 </p>
                 <p>
-                    Regulatory Content Data - PostgreSQL Database - READ ONLY - HRE Environment
+                    Summary Reports Data - PostgreSQL Database - READ ONLY - HRE Environment
                 </p>
 
                 <p>
