--- a/APIDocumentation/mdall-dataset-en.html
+++ b/APIDocumentation/mdall-dataset-en.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
     wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-    <title>Regulatory Content API</title>
+    <title>Medical Devices Active Licence Listing API</title>
     <meta content="width=device-width,initial-scale=1" name="viewport">
     <!-- Meta data -->
     <meta name="dcterms.language" title="ISO639-2" content="eng" />
