--- a/APIDocumentation/summary-report-dataset-en.html
+++ b/APIDocumentation/summary-report-dataset-en.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
     wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-    <title>Summary Report API</title>
+    <title>Summary Reports API</title>
     <meta content="width=device-width,initial-scale=1" name="viewport">
     <!-- Meta data -->
     <meta name="dcterms.language" title="ISO639-2" content="eng" />
@@ -425,7 +425,7 @@
 
                     <div class="row">
                         <div class="col-md-12">
-                            <h1>Summary Report</h1>
+                            <h1>Summary Reports</h1>
                         </div>
                     </div>
 
@@ -455,7 +455,7 @@
 
 
                             <div class="col-md-12">
-                                Summary Report...... 
+                                Summary Reports...... 
                             </div>
 
 
@@ -853,7 +853,7 @@
                                     <!-- Snippet package/snippets/resource_item.html start -->
                                     <tr>
                                         <td>
-                                             Regulatory Content API Documentation
+                                             Summary Reports API Documentation
 
 
                                         </td>
@@ -889,7 +889,7 @@
                                         <td>
 
 
-                                            Regulatory Content API Documentation
+                                            Summary Reports API Documentation
 
 
                                         </td>
