--- a/APIDocumentation/mdall-documentation-en.html
+++ b/APIDocumentation/mdall-documentation-en.html
@@ -554,7 +554,7 @@
                                 </tr>
                                 <tr>
                                     <td><strong>addr_line_3</strong></td>
-                                    <td>The ...</td>
+                                    <td>The ... TEST</td>
                                 </tr>
                                 <tr>
                                     <td><strong>postal_code</strong></td>
