--- a/APIDocumentation/mdall-documentation-en.html
+++ b/APIDocumentation/mdall-documentation-en.html
@@ -558,7 +558,7 @@
                                 </tr>
                                 <tr>
                                     <td><strong>postal_code</strong></td>
-                                    <td>The ...TEST</td>
+                                    <td>The ...TEST3</td>
                                 </tr>
                                 <tr>
                                     <td><strong>city</strong></td>
