Add new files for cta and noc and modified resource type.

--- a/APIDocumentation/application-en.html
+++ b/APIDocumentation/application-en.html
@@ -167,7 +167,7 @@
                 <a href="">Drug and Health Product Register</a>
 
                 <p>
-                    Summary Reports ...
+                    Regulatory Content ...
                 </p>
 
                 <p>
