--- a/APIDocumentation/summary-report-documentation-en.html
+++ b/APIDocumentation/summary-report-documentation-en.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
     wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-    <title>Summary Reports API</title>
+    <title>Summary Report API</title>
     <meta content="width=device-width,initial-scale=1" name="viewport">
     <!-- Meta data -->
     <meta name="dcterms.language" title="ISO639-2" content="eng" />
@@ -163,7 +163,7 @@
                     </div>
                 </nav>
                 <section>
-                    <h1 id="wb-cont">Summary Reports API Guide</h1>
+                    <h1 id="wb-cont">Summary Report API Guide</h1>
                     <!--h2-section-start-->
                     <section>
                         <h2 id="a">Table of contents</h2>
@@ -204,7 +204,7 @@
                         <h2 id="a1">Introduction</h2>
                         <p>The Drug and Health Product Register web site brings together Information on product licences, drug and health product inspections, buying and using products safely, and side effects, recalls and complaints.</p>
                         <p>This Application Programming Interface (API) allows developers to access that information in JSON format for reuse in their own applications.</p>
-                        <p>The base URI for the Summary Reports &nbsp;<a href="https://imsd.hres.ca/regcontent/api/">https://imsd.hres.ca/regcontent/api/</a>. Any requests are made relative to this URI.</p>
+                        <p>The base URI for the Regulatory Content &nbsp;<a href="https://imsd.hres.ca/regcontent/api/">https://imsd.hres.ca/regcontent/api/</a>. Any requests are made relative to this URI.</p>
                     </section>
                     <!--h2-section-end-->
                     <section>
