Fixed one small typo and change documentation for guide.

--- a/APIDocumentation/cta-dataset-en.html
+++ b/APIDocumentation/cta-dataset-en.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <!--[if lt IE 9]><html class="no-js lt-ie9" lang="en" dir="ltr"><![endif]--><!--[if gt IE 8]><!-->
 <html class="no-js" lang="en" dir="ltr">
 <!--<![endif]-->
@@ -430,7 +430,7 @@
                 <td>Dataset</td>
                 <td>JSON</td>
                 <td>French</td>
-                <td><a href="https://api.hres.ca/cta/api/anufacturer/?lang=fr&type=json" title="Resource 2" class="resource-url-analytics btn btn-primary" target="_blank">Access</a></td>
+                <td><a href="https://api.hres.ca/cta/api/manufacturer/?lang=fr&type=json" title="Resource 2" class="resource-url-analytics btn btn-primary" target="_blank">Access</a></td>
             </tr>
             <tr>
                 <td>Manufacturer</td>
