--- a/APIDocumentation/noc-dataset-en.html
+++ b/APIDocumentation/noc-dataset-en.html
@@ -644,14 +644,14 @@
             <!--Link to Documentation Begins-->
             <tr>
                 <td>Notice of Compliance API Documentation</td>
-                <td>Dataset</td>
+                <td>Guide</td>
                 <td>HTML</td>
                 <td>English</td>
                 <td><a href="http://api.hres.ca/documentation/noc-documentation-en.html" title="Resource 3" class="resource-url-analytics btn btn-primary" target="_blank">Access</a></td>
             </tr>
             <tr>
                 <td>Notice of Compliance API Documentation</td>
-                <td>Dataset</td>
+                <td>Guide</td>
                 <td>HTML</td>
                 <td>French</td>
                 <td><a href="http://api.hres.ca/documentation/noc-documentation-fr.html" title="Resource 4" class="resource-url-analytics btn btn-primary" target="_blank">Access</a></td>
