Added CSV Download buttons to the MDALL data. Cannot currently download cross-domain resources, but once everything is live this should not be a problem.

--- a/APIDocumentation/cta-dataset-en.html
+++ b/APIDocumentation/cta-dataset-en.html
@@ -44,7 +44,9 @@
     <!-- Google Tag Manager DO NOT REMOVE OR MODIFY - NE PAS SUPPRIMER OU MODIFIER -->
     <script>dataLayer1 = [];</script>
     <!-- End Google Tag Manager -->
-    <script type="text/javascript" src="./js/JSONtoCSV.js"></script>
+    <!--<script type="text/javascript" src="./js/JSONtoCSV.js"></script>-->
+    <script src="./js/JSONtoCSV.js"></script>
+
 
 </head>
 
